RESOLVED FIXED195410
REGRESSION(r242364): [WPE] Do not stop the compositing run loop update timer on suspend
https://bugs.webkit.org/show_bug.cgi?id=195410
Summary REGRESSION(r242364): [WPE] Do not stop the compositing run loop update timer ...
Carlos Garcia Campos
Reported 2019-03-07 08:00:27 PST
Calling CompositingRunLoop::stopUpdates() on suspend is leaving the threaded compositor in an inconsistent state, failing to resume and stopping the updates forever. This is causing timeouts in WPE layout tests.
Attachments
Patch (6.29 KB, patch)
2019-03-07 08:05 PST, Carlos Garcia Campos
no flags
Carlos Garcia Campos
Comment 1 2019-03-07 08:05:58 PST
WebKit Commit Bot
Comment 2 2019-03-07 09:17:22 PST
Comment on attachment 363874 [details] Patch Clearing flags on attachment: 363874 Committed r242597: <https://trac.webkit.org/changeset/242597>
WebKit Commit Bot
Comment 3 2019-03-07 09:17:24 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-03-07 09:18:19 PST
Note You need to log in before you can comment on or make changes to this bug.