Source/WebKit/Shared/CoordinatedGraphics/threadedcompositor/CompositingRunLoop.h
@@ -47,6 +47,9 @@ public:
     void performTask(Function<void ()>&&);
     void performTaskSync(Function<void ()>&&);
 
+    void suspend();
+    void resume();
+
     Lock& stateLock() { return m_state.lock; }
 
     void scheduleUpdate();
@@ -81,6 +84,7 @@ private:
         CompositionState composition { CompositionState::Idle };
         UpdateState update { UpdateState::Idle };
         bool pendingUpdate { false };
+        bool isSuspended { false };
     } m_state;
 };
 
